# avdl

./: Makefile  justfile  pyproject.toml  pytest.ini  setup.py
avdl/: __init__.py  cli.py
avdl/m3u8/: __init__.py  constant.py  download.py  playlist.py  video.py
avdl/partial/: __init__.py  curl.py
avdl/utils/: console.py  logging.py  text.py
tests/: test_cli.py
