[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"

[project]
name = "avdl"
version = "0.1.0"
description = "avdl - async video downloader"
authors = [
    { name = "Quantum Snowball", email = "quantum.snowball@gmail.com" }
]
dependencies = [
    "click",
    "aiohttp",
    "yarl",
    "alive-progress",
    "pycurl",
    "typer",
]
requires-python = ">=3.14"

[project.urls]
Homepage = "https://github.com/quantumsnowball/avdl"

[project.scripts]
avdl = "avdl.cli:avdl"

[tool.pyright]
venvPath = "./"
venv = ".venv"
