[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"

[project]
name = "avdl"
version = "0.1.0"
description = "avdl - async video downloader"
authors = [
    { name = "Quantum Snowball", email = "quantum.snowball@gmail.com" }
]
dependencies = [
    "aiohttp",
    "yarl",
    "alive-progress",
    "pycurl",
    "rich",
    "typer",
]
requires-python = ">=3.14"

[project.urls]
Homepage = "https://github.com/quantumsnowball/avdl"

[project.scripts]
avdl = "avdl:app"

[tool.pyright]
venvPath = "./"
venv = ".venv"

[tool.ruff.lint]
# Q = flake8-quotes (surgical string fixing)
# I = isort (import sorting)
# F401 = unused imports
select = ["Q", "I", "F401"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
docstring-quotes = "single"
multiline-quotes = "single"

[tool.ruff.format]
quote-style = "single"
